Stop notification box from being visible on startup

--- a/static/css/quenb.css
+++ b/static/css/quenb.css
@@ -45,6 +45,7 @@ img.bg {
 }
 
 #notices {
+    display: none;
 	position: absolute;
 	top: 10px;
 	left: 33%;
